tests/fixtures/invalid/pow_bool_bytes_set.py
# Cannot call pow() with Bool, Bytes, Set[int]
x = pow(True, b"hello", {1, 2, 3})
